--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,8 @@ yarn-error.log*
 /server/.env
 /server/.env.*
 /server/config/config.json
+/server/.vercel
+.vercel
 
+# Local Netlify folder
+.netlify
