--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "http-status": "^1.7.4",
+    "joi": "^17.13.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.0.3"
   }
