--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.17.0",
     "axios": "^1.6.2",
     "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
